--- a/views/templates/pedagogie.html.twig
+++ b/views/templates/pedagogie.html.twig
@@ -20,8 +20,11 @@
             {% endblock %}
 
             <section id="pedagogie" class="container">
+                <div class="title-wrapper">
+                    <img src="assets/img/Miaou/ChatProf.png" alt="Chat Prof" class="title-image">
+                    <h1>Notre pédagogie</h1>
+                </div>
 
-                <h1>🐾 Notre Pédagogie : Apprendre avec Miaou</h1>
 
                 {# 1. ARTICLE : NOTRE HISTOIRE #}
                 <article id="histoire">
