--- a/public/assets/styles/css/pages/modifyPassword.css
+++ b/public/assets/styles/css/pages/modifyPassword.css
@@ -547,7 +547,7 @@ body {
 }
 @media (min-width: 992px) {
   body {
-    background-repeat: no-repeat, no-repeat;
+    background-repeat: repeat-y, no-repeat;
     background-size: cover, 100% 100%;
     background-position: center top;
   }
